--- a/config.yaml
+++ b/config.yaml
@@ -5,10 +5,10 @@ dns:
   - https+local://8.8.8.8/dns-query
 inbounds:
 - port: 8080
-  protocol: vmess
+  protocol: trojan
   settings:
     clients:
-    - password: "513"
+    - password: "123"
   streamSettings:
     network: ws
     wsSettings:
